Use 96 vmin in leftbar mobile to fix the clipping of text.

--- a/style/library.less
+++ b/style/library.less
@@ -129,7 +129,7 @@ header {
     #leftBar {
         margin-left: calc(50% - 45vw);
         margin-right: calc(50% - 45vw);
-        width: 100vmin;
+        width: 96vmin;
         align-content: center;
     }
 }
